--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -3,6 +3,8 @@
     height: 20vh;
     position: sticky;
     z-index: 1001;
+    top: 0;
+    left: 0;
     background-color: white;
     box-shadow: 0 1px 2px rgb(0 0 0 / 6%);
     display: flex;
