--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -84,3 +84,8 @@
     color: white;
     background-color: #596aff;
 }
+.enquire button:hover{
+    color:blue;
+    background-color: white;
+    box-shadow:  4px 10px 5px  gray;
+}
